# aZeroEngine

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  ReadME.md  RenderWindow.hpp  TestGamepad.hpp  TestKeyboard.hpp  aZeroEditor.hpp  aZeroEngine.sln  apiExamples.hpp  idk  idk.aZene  main.cpp  windowCreation.hpp
aZeroEngine/: aZeroEngine.vcxproj  aZeroEngine.vcxproj.filters  main.cpp
aZeroEngine/src/Core/: D3D12Core.h  D3D12Include.h  DXCompilerInclude.h  Engine.h  EngineDebugMacros.h
aZeroEngine/src/Core/AssetTypes/: Material.h  MaterialAsset.h  Mesh.cpp  Mesh.h  MeshAsset.cpp  MeshAsset.h  RenderFileAsset.h  Texture.cpp  Texture.h  TextureAsset.cpp  TextureAsset.h
aZeroEngine/src/Core/Caches/: AssetCacheBase.h  MaterialCache.h  MeshCache.h  ShaderCache.h  TextureCache.h
aZeroEngine/src/Core/DataStructures/: FreelistAllocator.h  UniqueIndexList.h
aZeroEngine/src/Core/Misc/: Frustrum.h  NonMovable.h
aZeroEngine/src/Core/Renderer/: LightData.h  PrimitiveBatch.h  RenderAsset.h  RenderAssetData.cpp  RenderAssetData.h  RenderAssetManager.h  RenderGarbageCollector.h  RenderGraph.h  RenderInterface.h  RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h
aZeroEngine/src/Core/Renderer/D3D12Wrap/Commands/: CommandContext.h  CommandQueue.h
aZeroEngine/src/Core/Renderer/D3D12Wrap/Descriptors/: Descriptor.cpp  Descriptor.h  DescriptorHeap.h  DescriptorManager.h
aZeroEngine/src/Core/Renderer/D3D12Wrap/Pipeline/: InputLayout.h  RenderPass.h  Shader.cpp  Shader.h
aZeroEngine/src/Core/Renderer/D3D12Wrap/Resources/: DefaultHeapBuffer.cpp  DefaultHeapBuffer.h  FrameAllocator.h  FreelistBuffer.h  GPUBuffer.h  GPUResource.cpp  GPUResource.h  GPUResourceView.h  GPUTexture.cpp  GPUTexture.h  LinearBuffer.h  LinearFrameAllocator.h  PackedGPULookupBuffer.h  ReadbackHeapBuffer.cpp  ReadbackHeapBuffer.h  ResourceRecycler.cpp  ResourceRecycler.h  StructuredBuffer.h  UploadHeapBuffer.cpp  UploadHeapBuffer.h
aZeroEngine/src/Core/Renderer/D3D12Wrap/Window/: SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
aZeroEngine/src/Core/Scene/: Scene.h
aZeroEngine/src/Core/aZeroECSWrap/: ComponentManagerInterface.cpp  ComponentManagerInterface.h
aZeroEngine/src/Core/aZeroECSWrap/Components/: CameraComponent.h  DirectionalLightComponent.h  LightComponents.h  PointLightComponent.h  SpotLightComponent.h  StaticMeshComponent.h  TickComponent.h  TransformComponent.h
aZeroEngine/src/Core/aZeroECSWrap/aZeroECS/: ComponentArray.h  ComponentManager.h  Entity.h  EntityManager.h  SparseLookupArray.h  System.h  SystemManager.h  aZeroECS.h
aZeroEngine/src/Shaders/: BasePass.ps.hlsl  BasePass.vs.hlsl  BasePassPS.hlsl  BasePassVS.hlsl  PrimitiveBatch.ps.hlsl
assets/meshes/: goblin.fbx  soldier.fbx
content/assets/meshes/: unitCube.fbx  unitSphere.fbx
content/shaderSource/: AmpShader.as.hlsl  BasePass.ps.hlsl  BasePass.vs.hlsl  DebugLine.ps.hlsl  DebugLine.vs.hlsl  DefaultBindings.hlsli  Lights.hlsli  Materials.hlsli  MeshDrawPassCommon.hlsli  MeshObjectCulling.cs.hlsl  MeshShader.ms.hlsl  MeshletCommon.hlsli  MeshletCulling.cs.hlsl  MeshletDraw.ms.hlsl  MeshletDraw.ps.hlsl  NewBasePass.vs.hlsl  PixelShader.ps.hlsl  PrimitiveBatch.ps.hlsl  PrimitiveBatch.vs.hlsl  TestMeshShader.ms.hlsl  TestShader.cs.hlsl  TestShader.ms.hlsl  TestShader.ps.hlsl  VertexDefinitions.hlsli  Volumes.hlsli
idk/aZeroEngine/: CMakeLists.txt
idk/aZeroEngine/src/ecs/: aZeroECS.hpp
idk/aZeroEngine/src/ecs/components/: LightData.hpp  TransformComponent.hpp
idk/aZeroEngine/src/graphics_api/: CommandContext.hpp  D3D12Include.hpp  DescriptorHeap.hpp
idk/aZeroEngine/src/graphics_api/resource_type/: GPUResource.hpp  LinearBuffer.hpp  LinearFrameAllocator.hpp
idk/aZeroEngine/src/misc/: HelperFunctions.cpp  HelperFunctions.hpp  NonCopyable.hpp  NonMovable.hpp  stb_image.h
idk/aZeroEngine/src/renderer/: PrimitiveBatch.hpp  RenderInterface.hpp  Renderer.cpp
idk/aZeroEngine/src/renderer/render_asset/: RenderAssetData.hpp  RenderGarbageCollector.hpp
idk/aZeroEngine/src/renderer/render_graph/: RenderGraph.hpp  Shader.cpp  Shader.hpp
idk/aZeroEngine/src/window/: RenderWindow.cpp  RenderWindow.hpp
include/dxc/Test/: TestConfig.h
include/engine/: Engine.h
include/llvm/Config/: config.h  llvm-config.h
src/ecs/: ComponentManager.h  EntityManager.h  aZeroECS.h
src/ecs/components/: CameraComponent.h  LightComponents.h  LightData.h  StaticMeshComponent.h  TransformComponent.h
src/graphics_api/: CommandContext.h  CommandQueue.h  D3D12Include.h  DXCompilerInclude.h  Descriptor.h  DescriptorHeap.h
src/graphics_api/resource_type/: FreelistBuffer.h  GPUResource.h  GPUResourceView.h  LinearFrameAllocator.h
src/misc/: EngineDebugMacros.h  FreelistAllocator.h  HelperFunctions.cpp  HelperFunctions.h  stb_Image_Include.h
src/renderer/: PrimitiveBatch.h  RenderInterface.h  Renderer.cpp  Renderer.h  ResourceRecycler.h
src/renderer/render_asset/: RenderAsset.h  RenderAssetData.cpp  RenderAssetData.h  RenderAssetManager.h  RenderGarbageCollector.h
src/renderer/render_graph/: RenderGraph.h  RenderPass.h  Shader.cpp  Shader.h
src/scene/: Scene.h
src/window/: RenderWindow.cpp  RenderWindow.h
tests/: Tests.hpp
tests/content/shaders/: test.ms.hlsl  test.ps.hlsl  test.vs.hlsl
tools/llvm-config/: LibraryDependencies.inc
x64/Debug/: Settings.cap
